# inubot

./: .env.example  .gitignore  Cargo.toml  README.md  inu_config.example.toml  inu_config.toml  run.sh  start.sh  test.js
.github/workflows/: rust.yml
build_genesis/: Cargo.toml
build_genesis/src/: main.rs
contracts/script/: Deploy.s.sol
contracts/src/: ERC20.sol  Organic.sol  Tokens.sol
inu/: Cargo.toml
inu/contract_artifacts/: Organic.json
inu/src/: actor.rs  batcher.rs  builder.rs  cli.rs  error.rs  gas_oracle.rs  main.rs  nonce.rs  rate.rs
inu/src/actor/: error.rs  mod.rs  nonce.rs
inu/src/commands/: metrics.rs  mod.rs
inu/src/v2/: actor.rs  gas_oracle.rs  mod.rs  nonce.rs  rate.rs
scenarios/: stress.toml
