[workspace]
members = ["inu"]
resolver = "2"

[workspace.package]
license = "MIT"
edition = "2021"
repository = "https://github.com/AstarNetwork/inubot"
authors = ["Startale"]

[workspace.dependencies]
serde = "1.0.202"
clap = { version = "4.5.4", features = ["derive", "env"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
tracing = "0.1.40"
governor = "0.6.3"
thiserror = "1.0.61"
tokio-util = "0.7.11"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
toml = "0.8.14"
humantime = "2.1.0"
humantime-serde = "1.1.1"
futures = "0.3.30"
futures-util = "0.3.30"
dotenv = "0.15.0"
eyre = "0.6.12"
rand = "0.8.5"
alloy = { version = "0.1", features = [
    "full",
    "json-rpc",
    "signer-mnemonic",
    "rpc-client",
] }
