[package]
name = "build_genesis"
version = "0.0.1"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
ethers-signers = "2.0.14"   # gives MnemonicBuilder & wallets
ethers-core   = "2.0.14"    # Address type (pulled in anyway, but explicit)
rayon         = "1.8"
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
