[package]
name = "inu"
version = "0.1.0"
edition = "2021"
default-run = "inu"

[dependencies]
alloy = { workspace = true }
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive", "env"] }
dotenv = "0.15.0"
eyre = { workspace = true }
futures = "0.3.30"
futures-util = "0.3.30"
rand = { workspace = true }
# ethers = { workspace = true }
# ethers-solc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1.15"
tracing = "0.1.40"
tower = { version = "0.4", features = ["util", "limit"] }
governor = "0.6.3"
crossbeam = "0.8.4"
thiserror = "1.0.61"
derive_more = "0.99.17"
tokio-util = "0.7.11"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
twelf = { version = "0.15.0", features = ["toml"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
toml = "0.8.14"
humantime = "2.1.0"
humantime-serde = "1.1.1"
