[package]
name = "inu"
version = "0.1.0"
description = "A simple stress bot for producing organic load on EVM network."
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
alloy = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
governor = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true }
tracing-subscriber = { workspace = true }
figment = { workspace = true }
toml = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
